# almagest

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
crates/almagest-cli/: Cargo.toml
crates/almagest-cli/src/: dashboard.rs  doctor.rs  export.rs  import.rs  info.rs  main.rs  output.rs  template.rs  user.rs  validate.rs
crates/almagest-cli/tests/: cli.rs
crates/almagest-connectors/: Cargo.toml
crates/almagest-connectors/src/: csv.rs  error.rs  framework.rs  json.rs  lib.rs  parquet.rs  sqlite.rs
crates/almagest-connectors/tests/: importers.rs
crates/almagest-core/: Cargo.toml
crates/almagest-core/src/: assets.rs  auth.rs  dashboard.rs  dashboards.rs  data.rs  error.rs  file.rs  history.rs  lib.rs  metadata.rs  migrations.rs  queries.rs  schema.rs
crates/almagest-core/tests/: dashboard.rs  format.rs
crates/almagest-embed/: Cargo.toml
crates/almagest-embed/examples/: embed_minimal.rs
crates/almagest-embed/src/: lib.rs
crates/almagest-embed/tests/: embed.rs
crates/almagest-format/: Cargo.toml
crates/almagest-format/src/: lib.rs
crates/almagest-query/: Cargo.toml
crates/almagest-query/src/: cache.rs  context.rs  error.rs  lib.rs  params.rs  resolve.rs  result.rs  urlstate.rs
crates/almagest-query/tests/: engine.rs  parameters.rs
crates/almagest-server/: Cargo.toml  build.rs
crates/almagest-server/src/: admin_api.rs  api.rs  auth.rs  auth_api.rs  datasets.rs  error.rs  events.rs  export.rs  lib.rs  state.rs  static_assets.rs  tests.rs
docs/: README.md
examples/: README.md
examples/dashboards/: sales_overview.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: export.spec.ts  global-setup.ts  global-teardown.ts  shared.ts  smoke.spec.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: DashboardGrid.svelte  PanelCard.svelte  ParameterBar.svelte
frontend/src/components/inputs/: ParamInput.svelte
frontend/src/components/panels/: ChartPanel.svelte  DividerPanel.svelte  ImagePanel.svelte  MetricPanel.svelte  TablePanel.svelte  TextPanel.svelte
frontend/src/editor/: AssetManager.svelte  ChangePassword.svelte  DataManager.svelte  Inspector.svelte  UserManager.svelte
frontend/src/lib/: api.ts  arrow.ts  authState.svelte.ts  chartOption.ts  echarts.ts  format.ts  heartbeat.ts  params.ts  router.ts  snapshot.ts  snapshotData.ts  types.ts  urlstate.ts
frontend/src/routes/: DashboardList.svelte  Editor.svelte  Login.svelte  Setup.svelte  Viewer.svelte
