[package]
name = "almagest-connectors"
description = "Almagest author-time importers — bake local CSV/Parquet/JSON/SQLite files into a .alm (no live connectors)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
almagest-core.workspace = true
arrow.workspace = true
parquet.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
almagest-query.workspace = true
tokio = { workspace = true }
