[package]
name = "almagest-core"
description = "Almagest file format, schema, and core models — the .alm container."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
arrow.workspace = true
parquet.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
arrow.workspace = true
parquet.workspace = true
rusqlite.workspace = true
