[package]
name = "almagest-embed"
description = "Almagest embedding library — mount a .alm dashboard inside a host Rust program."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
almagest-core.workspace = true
almagest-server.workspace = true
