[package]
name = "almagest-embed"
description = "Almagest embedding library — mount a .alm dashboard inside a host Rust program."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
almagest-server.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Only the integration test (which bakes a .alm) and example touch core directly;
# the embedding library itself talks to the server crate.
almagest-core.workspace = true
tempfile.workspace = true
arrow.workspace = true
tracing-subscriber.workspace = true
