[package]
name = "almagest-format"
description = "Value formatting for Almagest panels — the canonical display spec shared by the renderer and exporters."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
