[package]
name = "almagest-query"
description = "Almagest query engine layer — DataFusion over the embedded data, with safe parameterization and a result cache."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
almagest-core.workspace = true
datafusion.workspace = true
arrow.workspace = true
rusqlite.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
